--- a/client/src/SignUp.css
+++ b/client/src/SignUp.css
@@ -20,6 +20,9 @@
   border-radius: 0px;
 }
 
+.Login {
+  background-color: #ffffff !important
+}
 @media (max-width: 767px) {                  
   .SignUpPage > .SidImage {
      display: none;
